--- a/airbnb/.env
+++ b/airbnb/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://airbnb:airbnb@cluster0.xj8wgyt.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
