--- a/airbnb/.env
+++ b/airbnb/.env
@@ -4,5 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# Using MongoDB
 DATABASE_URL="mongodb+srv://airbnb:airbnb@cluster0.xj8wgyt.mongodb.net/test"
+
+# Auth Config
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+# Providers
+GITHUB_ID=2e82711989f795adef72
+GITHUB_SECRET=60cdcd96d14ce371f9762c95e7f1cf5a00246a96
