--- a/airbnb/.env
+++ b/airbnb/.env
@@ -13,3 +13,6 @@ NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 # Providers
 GITHUB_ID=2e82711989f795adef72
 GITHUB_SECRET=60cdcd96d14ce371f9762c95e7f1cf5a00246a96
+
+GOOGLE_ID=532145133561-ggehhtv6m1ilkr3hrv0f9esrtm44jppl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
