--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -28,8 +28,10 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
