cloudinary for image done

--- a/airbnb/.env
+++ b/airbnb/.env
@@ -16,3 +16,5 @@ GITHUB_SECRET=60cdcd96d14ce371f9762c95e7f1cf5a00246a96
 
 GOOGLE_ID=532145133561-ggehhtv6m1ilkr3hrv0f9esrtm44jppl.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dcj1doh6v"
