--- a/airbnb/.env.example
+++ b/airbnb/.env.example
@@ -5,16 +5,16 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Using MongoDB
-DATABASE_URL=xxxxxxxxxxxxxxxxxxxx
+DATABASE_URL="mongodb+srv://airbnb:airbnb@cluster0.xj8wgyt.mongodb.net/test"
 
 # Auth Config
-NEXTAUTH_SECRET=xxxxxxxxxxxxxx
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 # Providers
-GITHUB_ID=xxxxxxxxxxxxxxxxx
-GITHUB_SECRET=xxxxxxxxxxxxx
+GITHUB_ID=2e82711989f795adef72
+GITHUB_SECRET=60cdcd96d14ce371f9762c95e7f1cf5a00246a96
 
-GOOGLE_ID=xxxxxxxxxxxxxxxxxx
-GOOGLE_CLIENT_SECRET=xxxxxxxxxxxxxxxx
+GOOGLE_ID=532145133561-ggehhtv6m1ilkr3hrv0f9esrtm44jppl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=xxxxxxxxxxx
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dcj1doh6v"
